# coruja-ai

./: benchmarker.py  main.py  ollama_benchmark_results_Gemma-3-Gaia-PT-BR-4b-it-Q8_0:latest.ndjson  ollama_benchmark_results_Gemma-3-Gaia-PT-BR-4b-it-Q8_0:latest_convertido.json  ollama_handler.py  pyproject.toml  readme.md
logs/: api_logs.txt  ollama_benchmark_results_Gemma-3-Gaia-PT-BR-4b-it-Q8_0:latest.ndjson  ollama_benchmark_results_gemma3:1b_enem_2022.ndjson  ollama_benchmark_results_gemma3n:e2b_enem_2024.ndjson
results/: logsFinal.txt  ollama_benchmark_results_gemma3:1b_enem_2022_convertido.json  ollama_benchmark_results_gemma3:1b_enem_2024_convertido.json  ollama_benchmark_results_gemma3:4b_enem_2022_convertido.json  ollama_benchmark_results_gemma3n:e2b_enem_2022_convertido.json
src/: benchmarker.py  convert_ndjson_to_json.py  df_test.ipynb  main.py  ollama_benchmark_results_gemma3:1b.ndjson  ollama_benchmark_results_gemma3:1b_1.ndjson  ollama_benchmark_results_gemma3:1b_1_convertido.json  ollama_benchmark_results_gemma3:1b_enem_2023.ndjson  ollama_benchmark_results_gemma3:4b_enem_2022.ndjson  ollama_benchmark_results_gemma3n:e2b_enem_2022.ndjson  ollama_handler.py  resultados_enem_ollama_verbose_2b_partial.json  shellscript.py
src/data/: 2022.json
src/logs/: ollama_benchmark_results_gemma3:1b_enem_2024.ndjson  ollama_benchmark_results_gemma3n:e2b_enem_2023.ndjson  resultados_enem_ollama_verbose.json  resultados_enem_ollama_verbose_1b.json  resultados_enem_ollama_verbose_2b_partial.json
src/results/: reorder.py  (+7 more)
